--- a/requirements.txt
+++ b/requirements.txt
@@ -66,6 +66,7 @@ psutil==5.9.5
 pure-eval==0.2.2
 pycparser==2.21
 Pygments==2.16.1
+PyMySQL==1.1.0
 pypng==0.20220715.0
 python-dateutil==2.8.2
 python-json-logger==2.0.7
